tests/ui/enum_align_unsupported.rs
#[cxx::bridge]
mod ffi {
    #[repr(align(2))]
    enum Bad {
        A,
    }
}

fn main() {}
